--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
         <!--end of tab2-->
         <div class="tab-page">
             <img src="3shi.webp" style="width:50%"/><br>
+            div style="font-size:1.5em; color:rgb(112,173,71)"><b>玩法非常多样可以和爬架搭配使用，更推荐在室外玩！如果需要原版玩法说明可以私信驯兽师</b></div>
             <div tb-code="3fu😄質1$Ownr31ZNYLR$:// CZ6144,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab3-->
@@ -189,7 +190,7 @@
             <br>
             <br>
              <img src="7qiuqian3.webp" style="width:40%"/><br>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>适合小娃，样式方便收纳不占空间</b></div>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>适合小娃，很多爬有选择的款式，优点是定型，缺点是不方便收纳</b></div>
             <div tb-code="1輹👋Zhi2(Fe3N3dzOgBC):// HU7679,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <br>
             <br>
