--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>羊毛厂专属优惠</b></div>
              <img id="img2-2" src="1taobao.webp" style="width:80%"/>
-            <p>详情请咨询吞金兽驯兽师小红书<br>或使用下面二维码+驯兽师羊毛厂微信或群聊</p>
+            <p>优惠价格详情，请咨询吞金兽驯兽师小红书<br>或使用下面二维码+驯兽师羊毛厂微信或群聊</p>
             <img src="4weixin.webp" style="display:inline-block;width:30%"/>
             <img src="1weixinqun.webp" style="display:inline-block;width:30%"/>
             <hr>
