--- a/index.html
+++ b/index.html
@@ -99,18 +99,19 @@
         <img src="logo.webp" style="width:60%" />
     </div>
     <div class="tab-btn-area">
-        <div class="tab-btn active" onclick="showTab(0)">选品一<br>德国原版quadro</div>
-        <div class="tab-btn" onclick="showTab(1)">选品二<br>国产元老世纪童年</div>
-        <div class="tab-btn" onclick="showTab(2)">选品三<br>国产过河石</div>
-        <div class="tab-btn" onclick="showTab(3)">选品四<br>吊环</div>
-        <div class="tab-btn" onclick="showTab(4)">选品五<br>吊桥绳</div>
-        <div class="tab-btn" onclick="showTab(5)">选品六<br>海洋球</div>
-        <div class="tab-btn" onclick="showTab(6)">选品七<br>秋千</div>
-        <div class="tab-btn" onclick="showTab(7)">选品八<br>大颗粒积木板</div>
-        <div class="tab-btn" onclick="showTab(8)">选品九<br>游戏/收纳盒</div>
-        <div class="tab-btn" onclick="showTab(9)">选品十<br>亚克力相关</div> 
-        <div class="tab-btn" onclick="showTab(10)">选品十一<br>铝管</div> 
-        <div class="tab-btn" onclick="showTab(11)">选品十二<br>洞洞板相关</div> 
+        <div class="tab-btn active" onclick="showTab(0)">选品01<br>德国原版quadro</div>
+        <div class="tab-btn" onclick="showTab(1)">选品02<br>国产元老世纪童年</div>
+        <div class="tab-btn" onclick="showTab(2)">选品03<br>国产过河石</div>
+        <div class="tab-btn" onclick="showTab(3)">选品04<br>吊环</div>
+        <div class="tab-btn" onclick="showTab(4)">选品05<br>吊桥绳</div>
+        <div class="tab-btn" onclick="showTab(5)">选品06<br>海洋球</div>
+        <div class="tab-btn" onclick="showTab(6)">选品07<br>秋千</div>
+        <div class="tab-btn" onclick="showTab(7)">选品08<br>大颗粒积木板</div>
+        <div class="tab-btn" onclick="showTab(8)">选品09<br>游戏/收纳盒</div>
+        <div class="tab-btn" onclick="showTab(9)">选品10<br>亚克力相关</div> 
+        <div class="tab-btn" onclick="showTab(10)">选品11<br>铝管</div> 
+        <div class="tab-btn" onclick="showTab(11)">选品12<br>洞洞板相关</div> 
+        <div class="tab-btn" onclick="showTab(12)">选品13<br>地垫</div> 
     </div>
     <div class="tab-page-area">
         <div class="tab-page active">
@@ -162,7 +163,7 @@
         <!--end of tab2-->
         <div class="tab-page">
             <img src="3shi.webp" style="width:50%"/><br>
-            div style="font-size:1.5em; color:rgb(112,173,71)"><b>玩法非常多样可以和爬架搭配使用，更推荐在室外玩！如果需要原版玩法说明可以私信驯兽师</b></div>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>玩法非常多样可以和爬架搭配使用，更推荐在室外玩！如果需要原版玩法说明可以私信驯兽师</b></div>
             <div tb-code="3fu😄質1$Ownr31ZNYLR$:// CZ6144,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab3-->
@@ -173,8 +174,13 @@
         <!--end of tab4-->
         <div class="tab-page">
             <img src="5sheng.webp" style="width:40%"/><br>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>吊桥10米均分成4段足够，还可以用来编织40x80的简易爬网</b></div>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>做为吊桥的话5-6mm粗，10米均分成4段足够，还可以用来编织40x80的简易爬网</b></div>
             <div tb-code="7輹👋Zhi9(2sWk3XcAo7S):// MF3106,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
+             <br>
+            <br>
+            <img src="5tanli.webp" style="width:40%"/><br>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>增加趣味性的话可以使用6mm粗的弹力绳来绑吊桥，做成蹦板</b></div>
+            <div tb-code="7Fu😊zhi2(LzkV3WkNGj6):// MF3084,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab5-->
         <div class="tab-page">
@@ -262,9 +268,26 @@
             <img src="12dongdongban2.webp" style="width:40%"/>
             <div tb-code="2輹👋Zhi7(CYys3drKMw0):// CA1371,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
+         <!--end of tab12-->   
+        <div class="tab-page">
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>可以进洗衣机清洗，可以彻底清洁，好收纳，但缓冲相对差一些</b></div>
+            <img src="13didan1.webp" style="width:40%"/>
+            <div tb-code="2Fu😊zhi4(94HT3WkpUAj):// CA1371,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
+            <br>
+            <br>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>弹性很好，方便清洁，适合小娃，但不是很好收纳</b></div>
+            <img src="13didan2.webp" style="width:40%"/>
+            <div tb-code="9輹👋Zhi0(gprW3Wkrt2f):// MF3106,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
+            <br>
+            <br>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>颜值很高可以随意拼装，较好收纳，但打理相较前两种比较困难</b></div>
+            <img src="13didan3.webp" style="width:40%"/>
+            <div tb-code="6輹👋Zhi6(dLRl3WkKUe9):// CZ3148,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
-        <!--end of tab12-->
+         <!--end of tab13-->   
     </div>
+        
+   
 </body>
 
 </html>
