--- a/index.html
+++ b/index.html
@@ -271,17 +271,17 @@
          <!--end of tab12-->   
         <div class="tab-page">
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>可以进洗衣机清洗，可以彻底清洁，好收纳，但缓冲相对差一些</b></div>
-            <img src="13didan1.webp" style="width:40%"/>
+            <img src="13ditan1.webp" style="width:40%"/>
             <div tb-code="2Fu😊zhi4(94HT3WkpUAj):// CA1371,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>弹性很好，方便清洁，适合小娃，但不是很好收纳</b></div>
-            <img src="13didan2.webp" style="width:40%"/>
+            <img src="13ditan2.webp" style="width:40%"/>
             <div tb-code="9輹👋Zhi0(gprW3Wkrt2f):// MF3106,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>颜值很高可以随意拼装，较好收纳，但打理相较前两种比较困难</b></div>
-            <img src="13didan3.webp" style="width:40%"/>
+            <img src="13ditan3.webp" style="width:40%"/>
             <div tb-code="6輹👋Zhi6(dLRl3WkKUe9):// CZ3148,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
          <!--end of tab13-->   
