--- a/index.html
+++ b/index.html
@@ -162,61 +162,67 @@
         </div>
         <!--end of tab2-->
         <div class="tab-page">
-            <img src="3shi.webp" style="width:50%"/><br>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>玩法非常多样可以和爬架搭配使用，更推荐在室外玩！如果需要原版玩法说明可以私信驯兽师</b></div>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>玩法非常多样可以和爬架搭配使用，更推荐在室外玩！如果需要原版Staplestein玩法说明可以私信驯兽师</b></div>
+            <img src="3shi.webp" style="width:50%"/>
             <div tb-code="3fu😄質1$Ownr31ZNYLR$:// CZ6144,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab3-->
         <div class="tab-page">
-            <img src="4dangang.webp" style="width:40%"/><br>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>可以让单杠旋转起来很好玩，也适合抓握力一般的崽崽过度，绳子还可以用在别的元素上</b></div>
+            <img src="4dangang.webp" style="width:40%"/>
             <div tb-code="1覆👋ZHI1$A30G312s2hs$:// MF3106,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab4-->
         <div class="tab-page">
-            <img src="5sheng.webp" style="width:40%"/><br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>做为吊桥的话5-6mm粗，10米均分成4段足够，还可以用来编织40x80的简易爬网</b></div>
+            <img src="5sheng.webp" style="width:40%"/>
             <div tb-code="7輹👋Zhi9(2sWk3XcAo7S):// MF3106,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
              <br>
             <br>
-            <img src="5tanli.webp" style="width:40%"/><br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>增加趣味性的话可以使用6mm粗的弹力绳来绑吊桥，做成蹦板</b></div>
+            <img src="5tanli.webp" style="width:40%"/>
             <div tb-code="7Fu😊zhi2(LzkV3WkNGj6):// MF3084,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
+             <br>
+            <br>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>可以选择25mm的棉绳作为爬网，较粗踩起来比较舒服</b></div>
+            <img src="5miansheng.webp" style="width:40%"/>
+            <div tb-code="3覆👋ZHI7(nKqr3WPc1YI):// MF3135,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab5-->
         <div class="tab-page">
-            <img src="6haiyangqiu.webp" style="width:40%"/><br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>Quadro是使用6cm直径的球装八分满2x2的40大板的球池，此链接是7cm的球200个左右足够半板球池</b></div>
+            <img src="6haiyangqiu.webp" style="width:40%"/>
             <div tb-code="6Fu😊zhi2(NLuR3XJNLAo):// CA1501,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab6-->
         <div class="tab-page">
-            <img src="7qiuqian1.webp" style="width:40%"/><br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>适合小娃，样式方便收纳不占空间</b></div>
+            <img src="7qiuqian1.webp" style="width:40%"/>
             <div tb-code="8覆👋ZHI9(hSlw3XJNtpw):// MU5183,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <br>
             <br>
-             <img src="7qiuqian3.webp" style="width:40%"/><br>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>适合小娃，很多爬有选择的款式，优点是定型，缺点是不方便收纳</b></div>
+             <img src="7qiuqian3.webp" style="width:40%"/>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>小泰克适合小娃，很多小伙伴选择的款式，优点是定型，缺点是不方便收纳</b></div>
             <div tb-code="1輹👋Zhi2(Fe3N3dzOgBC):// HU7679,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <br>
             <br>
-            <img src="7qiuqian2.webp" style="width:40%"/><br>
+            <img src="7qiuqian2.webp" style="width:40%"/>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>适合大娃，简单方便易收纳</b></div>
             <div tb-code="6覆👋ZHI7(EPp73XJmASr):// CZ6135,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab7-->
         <div class="tab-page">
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>Lego原版底板，得宝Duplo大颗粒积木使用，可以使用纳米胶固定，如果是水平放置两侧有两个1左右的点就不会动了</b></div>
-            <img src="8lego.webp" style="width:40%"/><br>
+            <img src="8lego.webp" style="width:40%"/>
             <div tb-code="3Fu😊zhi2(79et328t4Sa):// CZ6144,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>平替底板，适配得宝</div>
-            <img src="8jimuban.webp" style="width:40%"/><br>
+            <img src="8jimuban.webp" style="width:40%"/>
             <div tb-code="4Fu😊zhi2(68nU3XJn95u):// CZ3148,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab8-->
         <div class="tab-page">
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>Vessla这个尺寸可以卡在35x35cm的框架里，带上盖子就可以收纳，这种塑料的更适合玩沙子做感观盆</b></div>
-            <img src="9penzi.webp" style="width:40%"/><br>
+            <img src="9penzi.webp" style="width:40%"/>
             <div tb-code="8fu😄質6(srzg3XJOLbP):// CZ6135,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <br>
             <br>
@@ -270,17 +276,17 @@
         </div>
          <!--end of tab12-->   
         <div class="tab-page">
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>可以进洗衣机清洗，可以彻底清洁，好收纳，但缓冲相对差一些</b></div>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>纯棉地毯，可以进洗衣机清洗，可以彻底清洁，好收纳，但缓冲相对差一些</b></div>
             <img src="13ditan1.webp" style="width:40%"/>
             <div tb-code="2Fu😊zhi4(94HT3WkpUAj):// CA1371,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <br>
             <br>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>弹性很好，方便清洁，适合小娃，但不是很好收纳</b></div>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>曼龙地垫，弹性很好，方便清洁，适合小娃，但不是很好收纳</b></div>
             <img src="13ditan2.webp" style="width:40%"/>
             <div tb-code="9輹👋Zhi0(gprW3Wkrt2f):// MF3106,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <br>
             <br>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>颜值很高可以随意拼装，较好收纳，但打理相较前两种比较困难</b></div>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>东理地毯，颜值很高可以随意拼装，较好收纳，但打理相较前两种比较困难</b></div>
             <img src="13ditan3.webp" style="width:40%"/>
             <div tb-code="6輹👋Zhi6(dLRl3WkKUe9):// CZ3148,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
