--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="tab-btn" onclick="showTab(1)">选品02<br>国产元老世纪童年</div>
         <div class="tab-btn" onclick="showTab(2)">选品03<br>国产过河石</div>
         <div class="tab-btn" onclick="showTab(3)">选品04<br>吊环</div>
-        <div class="tab-btn" onclick="showTab(4)">选品05<br>吊桥绳</div>
+        <div class="tab-btn" onclick="showTab(4)">选品05<br>绳网</div>
         <div class="tab-btn" onclick="showTab(5)">选品06<br>海洋球</div>
         <div class="tab-btn" onclick="showTab(6)">选品07<br>秋千</div>
         <div class="tab-btn" onclick="showTab(7)">选品08<br>大颗粒积木板</div>
@@ -111,7 +111,8 @@
         <div class="tab-btn" onclick="showTab(9)">选品10<br>亚克力相关</div> 
         <div class="tab-btn" onclick="showTab(10)">选品11<br>铝管</div> 
         <div class="tab-btn" onclick="showTab(11)">选品12<br>洞洞板相关</div> 
-        <div class="tab-btn" onclick="showTab(12)">选品13<br>地垫</div> 
+        <div class="tab-btn" onclick="showTab(12)">选品13<br>地垫</div>
+        <div class="tab-btn" onclick="showTab(13)">选品14<br>配件收纳</div>
     </div>
     <div class="tab-page-area">
         <div class="tab-page active">
@@ -187,6 +188,13 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>可以选择25mm的棉绳作为爬网，较粗踩起来比较舒服</b></div>
             <img src="5miansheng.webp" style="width:40%"/>
             <div tb-code="3覆👋ZHI7(nKqr3WPc1YI):// MF3135,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
+             <br>
+            <br>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>成品爬网可以用于多种场景：1）围栏防坠，2）爬网（有点偏软不适合垂直方向），3）吊床秋千</b></div>
+            <img src="5wang3.webp" style="display:inline-block;width:30%"/>
+            <img src="5wang1.webp" style="display:inline-block;width:30%"/>
+            <img src="5wang2.webp" style="display:inline-block;width:30%"/>
+            <div tb-code="6fu😄質3(X55W3erODBv):// CA1831,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab5-->
         <div class="tab-page">
@@ -227,7 +235,7 @@
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>作为可以放在架子上的收纳，更推荐以下两种</b></div>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>慧儿推荐(推荐理由：比较小巧，方便分类收纳，一个35方格可以放两个，比较矮有空位，方便宝贝自己拿取）</b></div>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>xhs@慧慧为什么推荐(推荐理由：比较小巧，方便分类收纳，一个35方格可以放两个，比较矮有空位，方便宝贝自己拿取）</b></div>
             <img src="9shouna3.webp" style="display:inline-block;width:50%"/>
             <img src="9shouna4.webp" style="display:inline-block;width:50%"/>
             <div tb-code="1Fu😊zhi3(5Z0x32aLx2D):// ZH9102,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
@@ -290,7 +298,16 @@
             <img src="13ditan3.webp" style="width:40%"/>
             <div tb-code="6輹👋Zhi6(dLRl3WkKUe9):// CZ3148,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
-         <!--end of tab13-->   
+         <!--end of tab13-->  
+        <div class="tab-page">
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>1）驯兽师使用尿不湿的箱子进行收纳的，费用为0. <br>2）可以用架子收纳自己也非常好装<br>xhs@王大哥推荐下面这个软性收纳，尺寸正好合适（#150，50*35*46cm），装接头的时候要稍微注意一下，有划破的可能，没有1688也可以淘宝上购买同牌同款但稍微贵一些</b></div>
+            <img src="14shouna.webp" style="width:40%"/>
+            <a href="https://mindx.1688.com/tj/tuijian/2jdfz4NJxBEbxXWjFXZA/index.html?share_token=dey7B03ThDgne6N4GF+wETRQMYBzlFkuvqQSjBAMlf0C6nAi3fjXBw==&wh_pha=true&wh_pid=2794304&__pageId__=2794304&__existtitle__=1&awake_id=110&businessId=802636054650&__share_id=dd70a38f-ced4-4e75-a817-443ee42d00c7&currentPage=WAP_OFFER_DETAIL&__zhi_token=YaIMvma00rNaa&spm=a262eq.8992535/20240813.5103953.0&__removesafearea__=1&cbu_sv_id=17cd0ebd-d58c-486a-b058-9cdfd77628d0&visitorId=17cd0ebd-d58c-486a-b058-9cdfd77628d0&isVisited=true" target="_blank">
+               <span style="text-decoration:underline;font-size:1.8em;">点击打开1688链接</span>
+            </a>
+            <div tb-code="7輹👋Zhi9(e6Lm3ermS8Z):// ZH9102,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
+        </div>
+        <!--end of tab14-->
     </div>
         
    
