--- a/index.html
+++ b/index.html
@@ -163,85 +163,96 @@
         </div>
         <!--end of tab2-->
         <div class="tab-page">
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>玩法非常多样可以和爬架搭配使用，更推荐在室外玩！如果需要原版Staplestein玩法说明可以私信驯兽师</b></div>
+            <div style="font-size:1.2em; "><b>玩法非常多样可以和爬架搭配使用，更推荐在室外玩！如果需要原版Staplestein玩法说明可以私信驯兽师</b></div>
             <img src="3shi.webp" style="width:50%"/>
             <div tb-code="3fu😄質1$Ownr31ZNYLR$:// CZ6144,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab3-->
         <div class="tab-page">
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>可以让单杠旋转起来很好玩，也适合抓握力一般的崽崽过度，绳子还可以用在别的元素上</b></div>
+            <div style="font-size:1.2em; "><b>可以让单杠旋转起来很好玩，也适合抓握力一般的崽崽过度，绳子还可以用在别的元素上</b></div>
             <img src="4dangang.webp" style="width:40%"/>
             <div tb-code="1覆👋ZHI1$A30G312s2hs$:// MF3106,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab4-->
         <div class="tab-page">
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>做为吊桥的话5-6mm粗，10米均分成4段足够，还可以用来编织40x80的简易爬网</b></div>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>尼龙绳</b></div>
+            <div style="font-size:1.2em; "><b>做为吊桥的话5-6mm粗，10米均分成4段足够，还可以用来编织40x80的简易爬网</b></div>
             <img src="5sheng.webp" style="width:40%"/>
             <div tb-code="7輹👋Zhi9(2sWk3XcAo7S):// MF3106,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
              <br>
             <br>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>增加趣味性的话可以使用6mm粗的弹力绳来绑吊桥，做成蹦板</b></div>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>弹力绳</b></div>
+            <div style="font-size:1.2em; "><b>增加趣味性的话可以使用6mm粗的弹力绳来绑吊桥，做成蹦板</b></div>
             <img src="5tanli.webp" style="width:40%"/>
             <div tb-code="7Fu😊zhi2(LzkV3WkNGj6):// MF3084,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
              <br>
             <br>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>可以选择25mm的棉绳作为爬网，较粗踩起来比较舒服</b></div>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>自制爬网棉绳</b></div>
+            <div style="font-size:1.2em;)"><b>可以选择25mm的棉绳作为爬网，较粗踩起来比较舒服</b></div>
             <img src="5miansheng.webp" style="width:40%"/>
             <div tb-code="3覆👋ZHI7(nKqr3WPc1YI):// MF3135,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
              <br>
             <br>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>成品爬网可以用于多种场景：1）围栏防坠，2）爬网（有点偏软不适合垂直方向），3）吊床秋千</b></div>
-            <img src="5wang3.webp" style="display:inline-block;width:30%"/>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>成品爬网</b></div>
+            <div style="font-size:1.2em; "><b>成品爬网可以用于多种场景：1）围栏防坠，2）爬网（有点偏软不适合垂直方向），3）吊床秋千<br>选择孔径5cm，3m，结网型，可以围合蹦床三面半</b></div>
+            <img src="5wang3.webp" style="display:inline-block;width:30%;heigth:80%"/>
             <img src="5wang1.webp" style="display:inline-block;width:30%"/>
             <img src="5wang2.webp" style="display:inline-block;width:30%"/>
             <div tb-code="6fu😄質3(X55W3erODBv):// CA1831,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab5-->
         <div class="tab-page">
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>Quadro是使用6cm直径的球装八分满2x2的40大板的球池，此链接是7cm的球200个左右足够半板球池</b></div>
+            <div style="font-size:1.2em; "><b>Quadro是使用6cm直径的球装八分满2x2的40大板的球池，此链接是7cm的球200个左右足够半板球池</b></div>
             <img src="6haiyangqiu.webp" style="width:40%"/>
             <div tb-code="6Fu😊zhi2(NLuR3XJNLAo):// CA1501,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab6-->
         <div class="tab-page">
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>适合小娃，样式方便收纳不占空间</b></div>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>软秋千</b></div>
+            <div style="font-size:1.2em; "><b>适合小娃，样式方便收纳不占空间</b></div>
             <img src="7qiuqian1.webp" style="width:40%"/>
             <div tb-code="8覆👋ZHI9(hSlw3XJNtpw):// MU5183,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <br>
             <br>
-             <img src="7qiuqian3.webp" style="width:40%"/>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>小泰克适合小娃，很多小伙伴选择的款式，优点是定型，缺点是不方便收纳</b></div>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>定型秋千</b></div>
+            <div style="font-size:1.2em; "><b>小泰克适合小娃，很多小伙伴选择的款式，优点是定型，缺点是不方便收纳</b></div>
+            <img src="7qiuqian3.webp" style="width:40%"/>
             <div tb-code="1輹👋Zhi2(Fe3N3dzOgBC):// HU7679,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <br>
             <br>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>板子秋千</b></div>
+            <div style="font-size:1.2em; "><b>适合大娃，简单方便易收纳，也可以直接用15*35的半板搭建</b></div>
             <img src="7qiuqian2.webp" style="width:40%"/>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>适合大娃，简单方便易收纳</b></div>
             <div tb-code="6覆👋ZHI7(EPp73XJmASr):// CZ6135,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab7-->
         <div class="tab-page">
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>Lego原版底板，得宝Duplo大颗粒积木使用，可以使用纳米胶固定，如果是水平放置两侧有两个1左右的点就不会动了</b></div>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>Lego原版底板</b></div>
+            <div style="font-size:1.2em; "><b>得宝Duplo大颗粒积木使用，可以使用纳米胶固定，如果是水平放置两侧有两个1左右的点就不会动了</b></div>
             <img src="8lego.webp" style="width:40%"/>
             <div tb-code="3Fu😊zhi2(79et328t4Sa):// CZ6144,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>平替底板，适配得宝</div>
+            <br>
+            <br>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>平替底板，适配得宝</b></div>
             <img src="8jimuban.webp" style="width:40%"/>
             <div tb-code="4Fu😊zhi2(68nU3XJn95u):// CZ3148,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab8-->
         <div class="tab-page">
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>Vessla这个尺寸可以卡在35x35cm的框架里，带上盖子就可以收纳，这种塑料的更适合玩沙子做感观盆</b></div>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>适配方形箱子</b></div>
+            <div style="font-size:1.2em; "><b>Vessla这个尺寸可以卡在35x35cm的框架里，带上盖子就可以收纳，这种塑料的更适合玩沙子做感观盆</b></div>
             <img src="9penzi.webp" style="width:40%"/>
             <div tb-code="8fu😄質6(srzg3XJOLbP):// CZ6135,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>作为可以放在架子上的收纳，更推荐以下两种</b></div>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>xhs@慧慧为什么推荐(推荐理由：比较小巧，方便分类收纳，一个35方格可以放两个，比较矮有空位，方便宝贝自己拿取）</b></div>
+            <div style="font-size:1.2em; "><b>xhs@慧慧为什么推荐(推荐理由：比较小巧，方便分类收纳，一个35方格可以放两个，比较矮有空位，方便宝贝自己拿取）</b></div>
             <img src="9shouna3.webp" style="display:inline-block;width:50%"/>
             <img src="9shouna4.webp" style="display:inline-block;width:50%"/>
             <div tb-code="1Fu😊zhi3(5Z0x32aLx2D):// ZH9102,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <br>
             <br>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>推荐理由：尺寸比较严丝合缝，适合放需要防尘的物件，比如玩偶</b></div>
+            <div style="font-size:1.2em; "><b>推荐理由：尺寸比较严丝合缝，适合放需要防尘的物件，比如玩偶</b></div>
             <img src="9shouna5.webp" style="width:40%"/>
             <img src="9shouna1.webp" style="width:40%"/>
             <div tb-code="2輹👋Zhi3(fgYq32aKcDd):// MF1001,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
@@ -250,61 +261,67 @@
         </div>
         <!--end of tab9-->
         <div class="tab-page">
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>尺寸请选择8x350x400 经典色请选择深蓝色/红色/黄色/绿色</b></div>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>扎带</b></div>
+            <div style="font-size:1.2em; "><b>尺寸请选择8x350x400 经典色请选择深蓝色/红色/黄色/绿色</b></div>
             <img src="10zhadai.webp" style="width:40%"/>
             <div tb-code="4輹👋Zhi8(Klax3drrNdg):// HU7709,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <br>
             <br>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>在亚克力板上显色较为清楚，容易擦洗</b></div>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>玻璃蜡笔</b></div>
+            <div style="font-size:1.2em;"><b>在亚克力板上显色较为清楚，容易擦洗</b></div>
             <img src="10bi.webp" style="display:inline-block;width:40%"/>
             <img src="10bi2.webp" style="display:inline-block;width:40%"/>
             <div tb-code="5覆👋ZHI1(9mOb32bVPiy):// HU7709,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab10-->
         <div class="tab-page">
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>请联系客服选择外径27mm,长度为78cm的铝管，4根是60元，6根是58元</b></div>
+            <div style="font-size:1.2em; "><b>请联系客服选择外径27mm,长度为78cm的铝管，4根是60元，6根是58元</b></div>
             <img src="11lvguan.webp" style="width:40%"/>
             <div tb-code="2fu😄質7(P6JY3droUNN):// HU7177,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab11-->
         <div class="tab-page">
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>木质磁性字母贴，需要自己把磁条贴上，但很简单</b></div>
+             <div style="font-size:1.2em; "><b>木质磁性字母贴，需要自己把磁条贴上，但很简单</b></div>
             <img src="12dongdongban1.webp" style="width:40%"/>
             <div tb-code="2Fu😊zhi8(S9hA3dBaHon):// CZ3457,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <br>
             <br>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>吸力比较好的小可爱磁铁</b></div>
+             <div style="font-size:1.2em; "><b>吸力比较好的小可爱磁铁</b></div>
             <img src="12dongdongban3.webp" style="width:40%"/>
             <div tb-code="2覆👋ZHI3(1SQU3drKWYV):// MF3106,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <br>
             <br>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>车辆磁力贴，崽崽很喜欢，但单词翻译不是很完美</b></div>
+             <div style="font-size:1.2em; "><b>车辆磁力贴，崽崽很喜欢，但单词翻译不是很完美</b></div>
             <img src="12dongdongban2.webp" style="width:40%"/>
             <div tb-code="2輹👋Zhi7(CYys3drKMw0):// CA1371,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
          <!--end of tab12-->   
         <div class="tab-page">
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>纯棉地毯，可以进洗衣机清洗，可以彻底清洁，好收纳，但缓冲相对差一些</b></div>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>纯棉地毯</b></div>
+            <div style="font-size:1.2em; "><b>可以进洗衣机清洗，可以彻底清洁，好收纳，但缓冲相对差一些</b></div>
             <img src="13ditan1.webp" style="width:40%"/>
             <div tb-code="2Fu😊zhi4(94HT3WkpUAj):// CA1371,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <br>
-            <br>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>曼龙地垫，弹性很好，方便清洁，适合小娃，但不是很好收纳</b></div>
+            <br>          
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>曼龙地垫</b></div>
+            <div style="font-size:1.2em; "><b>弹性很好，方便清洁，适合小娃，但不是很好收纳</b></div>
             <img src="13ditan2.webp" style="width:40%"/>
             <div tb-code="9輹👋Zhi0(gprW3Wkrt2f):// MF3106,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <br>
             <br>
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>东理地毯，颜值很高可以随意拼装，较好收纳，但打理相较前两种比较困难</b></div>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>东理地毯</b></div>
+            <div style="font-size:1.2em; "><b>颜值很高可以随意拼装，较好收纳，但打理相较前两种比较困难</b></div>
             <img src="13ditan3.webp" style="width:40%"/>
             <div tb-code="6輹👋Zhi6(dLRl3WkKUe9):// CZ3148,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
          <!--end of tab13-->  
         <div class="tab-page">
-            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>1）驯兽师使用尿不湿的箱子进行收纳的，费用为0. <br>2）可以用架子收纳自己也非常好装<br>xhs@王大哥推荐下面这个软性收纳，尺寸正好合适（#150，50*35*46cm），装接头的时候要稍微注意一下，有划破的可能，没有1688也可以淘宝上购买同牌同款但稍微贵一些</b></div>
+            <div style="font-size:1.2em; "><b>1）驯兽师使用尿不湿的箱子进行收纳的，费用为0. <br>2）可以用架子收纳自己也非常好装<br>xhs@王大哥推荐下面这个软性收纳，尺寸正好合适（#150，50*35*46cm），装接头的时候要稍微注意一下，有划破的可能，没有1688也可以淘宝上购买同牌同款但稍微贵一些</b></div>
             <img src="14shouna.webp" style="width:40%"/>
             <a href="https://mindx.1688.com/tj/tuijian/2jdfz4NJxBEbxXWjFXZA/index.html?share_token=dey7B03ThDgne6N4GF+wETRQMYBzlFkuvqQSjBAMlf0C6nAi3fjXBw==&wh_pha=true&wh_pid=2794304&__pageId__=2794304&__existtitle__=1&awake_id=110&businessId=802636054650&__share_id=dd70a38f-ced4-4e75-a817-443ee42d00c7&currentPage=WAP_OFFER_DETAIL&__zhi_token=YaIMvma00rNaa&spm=a262eq.8992535/20240813.5103953.0&__removesafearea__=1&cbu_sv_id=17cd0ebd-d58c-486a-b058-9cdfd77628d0&visitorId=17cd0ebd-d58c-486a-b058-9cdfd77628d0&isVisited=true" target="_blank">
                <span style="text-decoration:underline;font-size:1.8em;">点击打开1688链接</span>
             </a>
+             <br>
             <div tb-code="7輹👋Zhi9(e6Lm3ermS8Z):// ZH9102,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab14-->
