--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
         <div class="tab-btn" onclick="showTab(11)">选品12<br>洞洞板相关</div> 
         <div class="tab-btn" onclick="showTab(12)">选品13<br>地垫</div>
         <div class="tab-btn" onclick="showTab(13)">选品14<br>配件收纳</div>
+        <div class="tab-btn" onclick="showTab(14)">选品15<br>彩虹门</div>
     </div>
     <div class="tab-page-area">
         <div class="tab-page active">
@@ -156,6 +157,7 @@
 
             <p>扫描二维码或微信界面下长按二维码进入快团团小程序购买</p>
             <img src="2kuaituantuan2.webp" style="width:30%"/>
+            <p>或复制以下链接，发送微信信息给自己后打开<br>#小程序://快团团/iHVbB67txzMvnAi </p>
             <hr>
             <p>入群欢享“驯兽师羊毛厂”专属附加福利</p>
             <img src="4weixin.webp" style="display:inline-block;width:30%"/>
@@ -325,6 +327,24 @@
             <div tb-code="7輹👋Zhi9(e6Lm3ermS8Z):// ZH9102,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab14-->
+        <div class="tab-page">
+            <div style="font-size:1.2em; "><b>彩虹门的原创作者xhs@娜娜和宝平欧巴，是非常收欢迎的一款周边单品。点击下面链接可以在xhs上直接购买！羊毛厂也争取到了一点点小福利，入群有详情。</b></div>
+            <img src="15rainbow(1).webp" style="display:inline-block;width:20%"/>
+            <img src="15rainbow(2).webp" style="display:inline-block;width:20%"/>
+            <img src="15rainbow(3).webp" style="display:inline-block;width:20%"/>
+            <img src="15rainbow(4).webp" style="display:inline-block;width:20%"/>
+            <img src="15rainbow(5).webp" style="display:inline-block;width:20%"/>
+            <a href="https://www.xiaohongshu.com/goods-detail/663bb5fbd0faa80001b3dd95?instation_link=xhsdiscover%3A%2F%2Fgoods_detail%2F663bb5fbd0faa80001b3dd95%3Ftrade_ext%3DeyJjaGFubmVsSW5mbyI6bnVsbCwiZHNUb2tlbkluZm8iOm51bGwsInNoYXJlTGluayI6Imh0dHBzOi8vd3d3LnhpYW9ob25nc2h1LmNvbS9nb29kcy1kZXRhaWwvNjYzYmI1ZmJkMGZhYTgwMDAxYjNkZDk1P2FwcHVpZD01Y2E2NzA2ZDAwMDAwMDAwMTcwMTI5MDciLCJsaXZlSW5mbyI6bnVsbCwic2hvcEluZm8iOm51bGwsImdvb2RzTm90ZUluZm8iOm51bGx9%26rn%3Dtrue&xhsshare=CopyLink&appuid=5ca6706d0000000017012907&apptime=1723708760" target="_blank">
+            <span style="text-decoration:underline;font-size:1.8em;">点击打开小红书链接</span>
+            </a>
+            <hr>
+            <p>入群欢享“驯兽师羊毛厂”专属附加福利</p>
+            <img src="4weixin.webp" style="display:inline-block;width:30%"/>
+            <img src="1weixinqun.webp" style="display:inline-block;width:30%"/>
+        </div>
+        <!--end of tab15-->
+
+        
     </div>
         
    
