--- a/index.html
+++ b/index.html
@@ -328,14 +328,15 @@
         </div>
         <!--end of tab14-->
         <div class="tab-page">
-            <div style="font-size:1.2em; "><b>彩虹门的原创作者xhs@娜娜和宝平欧巴，是非常收欢迎的一款周边单品。点击下面链接可以在xhs上直接购买！羊毛厂也争取到了一点点小福利，入群有详情。</b></div>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>原创作者xhs@娜娜和宝平欧巴的彩虹门</b></div>
+            <div style="font-size:1.2em; "><b>是非常收欢迎的一款周边单品。不想自己动手做的小伙伴可以直接入！羊毛厂也争取到了一点点小福利，入群有详情。</b></div>
             <img src="15rainbow(1).webp" style="display:inline-block;width:20%"/>
             <img src="15rainbow(2).webp" style="display:inline-block;width:20%"/>
             <img src="15rainbow(3).webp" style="display:inline-block;width:20%"/>
             <img src="15rainbow(4).webp" style="display:inline-block;width:20%"/>
             <img src="15rainbow(5).webp" style="display:inline-block;width:20%"/>
             <a href="https://www.xiaohongshu.com/goods-detail/663bb5fbd0faa80001b3dd95?instation_link=xhsdiscover%3A%2F%2Fgoods_detail%2F663bb5fbd0faa80001b3dd95%3Ftrade_ext%3DeyJjaGFubmVsSW5mbyI6bnVsbCwiZHNUb2tlbkluZm8iOm51bGwsInNoYXJlTGluayI6Imh0dHBzOi8vd3d3LnhpYW9ob25nc2h1LmNvbS9nb29kcy1kZXRhaWwvNjYzYmI1ZmJkMGZhYTgwMDAxYjNkZDk1P2FwcHVpZD01Y2E2NzA2ZDAwMDAwMDAwMTcwMTI5MDciLCJsaXZlSW5mbyI6bnVsbCwic2hvcEluZm8iOm51bGwsImdvb2RzTm90ZUluZm8iOm51bGx9%26rn%3Dtrue&xhsshare=CopyLink&appuid=5ca6706d0000000017012907&apptime=1723708760" target="_blank">
-            <span style="text-decoration:underline;font-size:1.8em;">点击打开小红书链接</span>
+            <span style="text-decoration:underline;font-size:1.8em;">点击打开小红书购买链接</span>
             </a>
             <hr>
             <p>入群欢享“驯兽师羊毛厂”专属附加福利</p>
