--- a/index.html
+++ b/index.html
@@ -279,13 +279,13 @@
         <div class="tab-page">
             <div style="font-size:1.2em; "><b>请联系客服选择外径27mm,长度为78cm的铝管，4根是60元，6根是58元</b></div>
             <img src="11lvguan.webp" style="width:40%"/>
-            <div tb-code="2fu😄質7(P6JY3droUNN):// HU7177,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
+            <div tb-code="3Fu😊zhi3(OjeT3V5p6y2):// HU7709,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
         </div>
         <!--end of tab11-->
         <div class="tab-page">
              <div style="font-size:1.2em; "><b>木质磁性字母贴，需要自己把磁条贴上，但很简单</b></div>
             <img src="12dongdongban1.webp" style="width:40%"/>
-            <div tb-code="2Fu😊zhi8(S9hA3dBaHon):// CZ3457,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
+            <div tb-code="0Fu😊zhi5(r5xV3V5Kosy):// MF3084,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <br>
             <br>
              <div style="font-size:1.2em; "><b>吸力比较好的小可爱磁铁</b></div>
