--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <div class="tab-page-area">
         <div class="tab-page active">
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>限时优惠活动</b></div>
-            <p>暂无</p>
+            <img id="img2-2" src="1xianshi.webp" style="width:80%"/>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>羊毛厂专属优惠</b></div>
              <img id="img2-2" src="1taobao.webp" style="width:80%"/>
