--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             display:block;
             width: 90vw;
             max-height: 90vh;
+            object-fit:contain;
         }
 
         a{
