--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>商家介绍</b></div>
             <div style="font-size:1.2em; "><b>德国Quadro授权的中国市场经销商，原装正品，在淘宝上进行交易，国内现货，发货迅速，有靠谱的售后。</b></div>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>限时优惠活动</b></div>
-            <img id="img2-2" src="1xianshi.webp" style="width:80%"/>
+            <img src="1xianshi.webp" style="width:80%"/>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>羊毛厂专属优惠</b></div>
-             <img id="img2-2" src="1taobao.webp" style="width:80%"/>
+             <img src="1taobao.webp" style="width:80%"/>
             <p>优惠价格详情，请咨询吞金兽驯兽师小红书<br>或使用下面二维码+驯兽师羊毛厂微信或群聊</p>
             <img src="4weixin.webp" style="display:inline-block;width:30%"/>
             <img src="1weixinqun.webp" style="display:inline-block;width:30%"/>
@@ -156,7 +156,7 @@
 
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>羊毛厂专属优惠</b></div>
-            <img id="img2-2" src="2yangmao.webp" style="width:80%"/>
+            <img src="2yangmao.webp" style="width:80%"/>
 
             <p>扫描二维码或微信界面下长按二维码进入快团团小程序购买</p>
             <img src="2kuaituantuan2.webp" style="width:30%"/>
