--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
     </div>
     <div class="tab-page-area">
         <div class="tab-page active">
+            <div style="font-size:1.2em; "><b>如果链接失效，请私信告知领取新的链接，谢谢！。</b></div>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>商家介绍</b></div>
             <div style="font-size:1.2em; "><b>德国Quadro授权的中国市场经销商，原装正品，在淘宝上进行交易，国内现货，发货迅速，有靠谱的售后。</b></div>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>限时优惠活动</b></div>
@@ -133,7 +134,7 @@
             <div class="yangmaochang" style="font-size:1.5em">
                 <span style="color:rgb(112,173,71)"><b>如何获取羊毛厂优惠？</b></span><br><br>
                 <b class="taobao"
-                    onclick="clip(this)" tb-code="8$7XF931fr6Mz$:// MU6304">点击此处复制淘口令</b><br>
+                    onclick="clip(this)" tb-code="1$4SX134gAQfs$:// MF1001">点击此处复制淘口令</b><br>
                 <span style="color:rgb(112,173,71)">▼</span><br>
                 打开淘宝查看商品<br>
                 <span style="color:rgb(112,173,71)">▼</span><br>
