--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
              <br>
             <br>
             <div style="font-size:1.5em; color:rgb(112,173,71)"><b>自制爬网棉绳</b></div>
-            <div style="font-size:1.2em;)"><b>可以选择25mm的棉绳作为爬网，较粗踩起来比较舒服</b></div>
+            <div style="font-size:1.2em;"><b>可以选择25mm的棉绳作为爬网，较粗踩起来比较舒服</b></div>
             <img src="5miansheng.webp" style="width:40%"/>
             <div tb-code="3覆👋ZHI7(nKqr3WPc1YI):// MF3135,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
              <br>
