--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="tab-btn" onclick="showTab(8)">选品09<br>游戏/收纳盒</div>
         <div class="tab-btn" onclick="showTab(9)">选品10<br>亚克力相关</div> 
         <div class="tab-btn" onclick="showTab(10)">选品11<br>铝管</div> 
-        <div class="tab-btn" onclick="showTab(11)">选品12<br>洞洞板相关</div> 
+        <div class="tab-btn" onclick="showTab(11)">选品12<br>金属洞洞板</div> 
         <div class="tab-btn" onclick="showTab(12)">选品13<br>地垫</div>
         <div class="tab-btn" onclick="showTab(13)">选品14<br>配件收纳</div>
         <div class="tab-btn" onclick="showTab(14)">选品15<br>彩虹门</div>
@@ -285,12 +285,21 @@
         </div>
         <!--end of tab11-->
         <div class="tab-page">
-             <div style="font-size:1.2em; "><b>木质磁性字母贴，需要自己把磁条贴上，但很简单</b></div>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>金属洞洞板</b></div>
+            <div style="font-size:1.2em; "><b>推荐用心在做产品的两个姐妹，他们的洞洞板各有千秋，大家根据自己的需求选择<br>羊毛厂会不定时组织团购活动，欢迎进去蹲！</b></div>
+            <div style="font-size:1.2em; "><b>1：|吉祥如意小裁缝|特点是圆形通用孔洞、细磨砂质地、环保喷塑、和Quadro大板尺寸一致可以严丝合缝链接、对边固定空洞、面板大螺丝固定、整体相对轻便。</b></div>
+            <img src="12dongdongban1.webp" style="width:40%"/>
+            <div tb-code="https://m.tb.cn/h.gncFHcL?tk=uhYx3fMk5OK HU904">点此复制链接，浏览器地址栏中粘贴打开</div>
+            <div style="font-size:1.2em; "><b>1：|哎哟妈呀|特点是宜家长孔、喷塑光面、四边固定孔洞、面板大螺丝固定、板面比较厚实。</b></div>
+            <img src="12dongdongban2.webp" style="width:40%"/>
+            <div tb-code="https://m.tb.cn/h.gnXYrbem9C0XWan?tk=hIoZ3fMHeFY MF3543 ">点此复制链接，打开淘宝App查看商品</div>
+            <div style="font-size:1.5em; color:rgb(112,173,71)"><b>洞洞板周边配件</b></div>
+            <div style="font-size:1.2em; "><b>木质磁性字母贴，需要自己把磁条贴上，但很简单</b></div>
             <img src="12dongdongban1.webp" style="width:40%"/>
             <div tb-code="1輹👋Zhi7(MHp634zwQ3o):// CA1710,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <br>
             <br>
-             <div style="font-size:1.2em; "><b>吸力比较好的小可爱磁铁</b></div>
+            <div style="font-size:1.2em; "><b>吸力比较好的小可爱磁铁</b></div>
             <img src="12dongdongban3.webp" style="width:40%"/>
             <div tb-code="6fu😄質9(b6Xe34zEnw5):// MU5183,打開/" class="taobao" onclick="clip(this)">点此复制淘口令，打开淘宝App查看商品</div>
             <br>
